tests/baselines/reference/propertySignatures(strict=true).errors.txt
propertySignatures.ts(2,13): error TS2300: Duplicate identifier 'a'.
propertySignatures.ts(2,23): error TS2300: Duplicate identifier 'a'.
propertySignatures.ts(5,13): error TS7008: Member 'a' implicitly has an 'any' type.
propertySignatures.ts(6,1): error TS2454: Variable 'foo2' is used before being assigned.
propertySignatures.ts(7,1): error TS2454: Variable 'foo2' is used before being assigned.
propertySignatures.ts(14,12): error TS2552: Cannot find name 'foo'. Did you mean 'foo1'?
propertySignatures.ts(17,12): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
propertySignatures.ts(18,12): error TS2454: Variable 'foo5' is used before being assigned.


==== propertySignatures.ts (8 errors) ====
    // Should be error - duplicate identifiers
    var foo1: { a:string; a: string; };
                ~
!!! error TS2300: Duplicate identifier 'a'.
                          ~
!!! error TS2300: Duplicate identifier 'a'.
    
    // Should be OK
    var foo2: { a; };
                ~
!!! error TS7008: Member 'a' implicitly has an 'any' type.
    foo2.a = 2;
    ~~~~
!!! error TS2454: Variable 'foo2' is used before being assigned.
    foo2.a = "0";
    ~~~~
!!! error TS2454: Variable 'foo2' is used before being assigned.
    
    // Should be error
    var foo3: { (): string; (): string; };
    
    // Should be OK
    var foo4: { (): void; };
    var test = foo();
               ~~~
!!! error TS2552: Cannot find name 'foo'. Did you mean 'foo1'?
!!! related TS2728 propertySignatures.ts:2:5: 'foo1' is declared here.
    
    // Should be OK
    var foo5: {();};
               ~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
    var test = foo5();
               ~~~~
!!! error TS2454: Variable 'foo5' is used before being assigned.
    test.bar = 2;
    